--- a/ch10-cors/pom.xml
+++ b/ch10-cors/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>ch10-cors</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
